--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -322,6 +322,7 @@ Common program behavior
 * Installed scripts::           Installed Bash scripts, not compiled programs.
 * Multi-threaded operations::   How threads are managed in Gnuastro.
 * Numeric data types::          Different types and how to specify them.
+* Memory management::           How memory is allocated (in RAM or HDD/SSD).
 * Tables::                      Recognized table formats.
 * Tessellation::                Tile the dataset into non-overlapping bins.
 * Automatic output::            About automatic output names.
@@ -6177,6 +6178,7 @@ When the output is a FITS file, all the programs also store some very useful inf
 * Installed scripts::           Installed Bash scripts, not compiled programs.
 * Multi-threaded operations::   How threads are managed in Gnuastro.
 * Numeric data types::          Different types and how to specify them.
+* Memory management::           How memory is allocated (in RAM or HDD/SSD).
 * Tables::                      Recognized table formats.
 * Tessellation::                Tile the dataset into non-overlapping bins.
 * Automatic output::            About automatic output names.
@@ -6535,29 +6537,16 @@ Also, if they are irrelevant for a program, these options will not display in th
 @table @option
 
 @item --minmapsize=INT
-The minimum size (in bytes) to store the contents of each main processing array of a program as a file (on the non-volatile HDD/SSD), not in RAM.
-This can be very useful when you have limited RAM, but need to process large datasets which can be very memory intensive.
-In such scenarios, without this option, the program will crash.
-
-A random filename is assigned to the array.
-This file will keep the contents of the array as long as it is necessary and the program will delete it as soon as its not necessary any more.
-
-If the @file{.gnuastro_mmap} directory exists and is writable, then the random file will be placed in there.
-Otherwise, the randomly named file will be directly written in the current directory with the @file{.gnuastro_mmap_} prefix.
-
-By default, the name of the created file, and its size (in bytes) is printed by the program when it is created and later, when its deleted/freed.
-These messages are useful to the user who has enough RAM, but has forgot to increase the value to @code{--minmapsize} (this is often the case).
-To suppress/disable such messages, use the @code{--quietmmap} option.
-
-When this option has a value of @code{0} (zero, strongly discouraged, see box below), all arrays that use this feature in a program will actually be placed in a file (not in RAM).
-When this option is larger than all the input datasets, all arrays will be definitely allocated in RAM and the program will run MUCH faster.
+The minimum size (in bytes) to memory-map a processing/internal array as a file (on the non-volatile HDD/SSD), and not use the system's RAM.
+Before using this option, please read @ref{Memory management}.
+By default processing arrays will only be memory-mapped to a file when the RAM is full.
+With this option, you can force the memory-mapping, even when there is enough RAM.
+To ensure this default behavior, the pre-defined value to this option is an extremely large value (larger than any existing RAM).
 
 Please note that using a non-volatile file (in the HDD/SDD) instead of RAM can significantly increase the program's running time, especially on HDDs (where read/write is slower).
-So it is best to give this option large values by default.
+Also, note that the number of memory-mapped files that your kernel can support is limited.
+So when this option is necessary, it is best to give it values larger than 1 megabyte (@option{--minmapsize=1000000}).
 You can then decrease it for a specific program's invocation on a large input after you see memory issues arise (for example an error, or the program not aborting and fully consuming your memory).
-
-The random file will be deleted once it is no longer needed by the program.
-The @file{.gnuastro} directory will also be deleted if it has no other contents (you may also have configuration files in this directory, see @ref{Configuration files}).
 If you see randomly named files remaining in this directory when the program finishes normally, please send us a bug report so we address the problem, see @ref{Report a bug}.
 
 @cartouche
@@ -7538,7 +7527,7 @@ This allows you to be much more productive in easily checking various ideas/assu
 
 
 
-@node Numeric data types, Tables, Multi-threaded operations, Common program behavior
+@node Numeric data types, Memory management, Multi-threaded operations, Common program behavior
 @section Numeric data types
 
 @cindex Bit
@@ -7652,7 +7641,132 @@ If you are writing your own program, you can use the @code{gal_data_copy_to_new_
 
 
 
-@node Tables, Tessellation, Numeric data types, Common program behavior
+@node Memory management, Tables, Numeric data types, Common program behavior
+@section Memory management
+
+@cindex Memory management
+@cindex Non-volatile memory
+@cindex Memory, non-volatile
+In this section we'll review how Gnuastro manages your input data in the available memory of your system.
+But before that, let's have a short basic introduction to the types of memory most relevant to this discussion.
+
+Input datasets (that are later fed into programs for analysis) are commonly first stored in @emph{non-volatile memory}.
+This is a type of memory that doesn't need any constant power to keep the data, like HDDs or SSDs and is primarily aimed for long-term storage.
+So data in this type of storage is preserved when you turn off your computer.
+But non-volatile memory is much slower in reading or writing than the speeds that CPUs can process the data.
+Thus relying on this type of memory alone would create a bad bottleneck in the input/output (I/O) phase of any processing.
+
+@cindex RAM
+@cindex Volatile memory
+@cindex Memory, volatile
+The first step to decrease this bottleneck is to have a faster storage space, but with more limited volume.
+For this type of storage, computers have a Random Access Memory (or RAM).
+RAM is classified as a @emph{volatile memory} because it needs a constant power source to keep the information.
+In other words, the moment power is cut-off, all the stored information in it is gone (hence the 'volatile' name).
+By assuming that sufficient power is always available, volatile memory is much faster than non-volatile memory.
+
+Hence, the general/simplistic way that programs deal with memory is the following (this is general to all programs, not just Gnuastro's):
+1) Load/copy the input data from the non-volatile memory into RAM.
+2) Use the copy in RAM as input for all the internal processing as well as the intermediatea data that is necessary during the processing.
+3) Finally, when the analyis is complete, write the final output data back into non-volatile memory, and delete all the used space in the RAM (the initial copy and all the intermediate data).
+The RAM is most important for the data of the intermediate steps (that you never see as a user of a program!).
+
+When the datasets are small (compared to the available space in your system's RAM when they are run) the steps above are roughly accurate in Gnuastro's programs and libraries.
+The only exception is that deleting the intermediate data is not only done at the end of the program.
+As soon as an intermediate dataset is no longer necessary for the next internal steps, it is deleted.
+This allows Gnuastro programs to minimize their usage of your system's RAM.
+
+The situation gets complicated when the datasets are large (compared to your available RAM when they are run).
+For example if a dataset if half the size of your system's available RAM, and the program's analysis needs three or more intermediately processed versions of it in a certain phase of its analysis, there won't be enough RAM to keep those higher-level versions.
+In such cases, programs that don't do any memory management will crash.
+But fortunately Gnuastro's programs do have a memory management plans for such situations.
+
+@cindex Memory-mapped file
+When the necessary amount of space for an intermediate dataset cannot be allocated in the RAM, instead of crashing, Gnuastro's programs will not use the RAM at all.
+They will use the ``memory-mapped file'' concept in modern operating systems to create a randomly-named file in your non-volatile memory and use that instead.
+That file will have the exact size (in bytes) of that intermediate dataset.
+Any time the program needs that intermediate dataset, the operating system will directly go to that file, and bypass your RAM.
+As soon as that file is no longer necessary for the analysis, it will be deleted.
+But as mentioned above, non-volatile memory has much slower I/O speed than the RAM.
+Hence in such situations, the programs will become noticably slower.
+
+By default, Gnuastro's programs and libraries will notify you with a statement like below, the moment that an intermediate dataset is memory-mapped (can happen in any phase of their analysis).
+It shows the location of the memory-mapped file and its size, complemented with a small description of the cause and a pointer to this section of the book for more information on how to deal with it (if necessary).
+
+@example
+astarithmetic: ./.gnuastro_mmap/B1QgVf: temporary memory-mapped file
+(XXXXX bytes) for intermediate data that is not stored in RAM (see
+the "Memory management" section of Gnuastro's manual)
+@end example
+
+@noindent
+Finally, when the intermediate dataset is no longer necessary, the program will automatically delete it and let you know with a statement like this:
+
+@example
+astarithmetic: ./.gnuastro_mmap/B1QgVf: deleted
+@end example
+
+@noindent
+To disable these messages, you can run the program with @code{--quietmmap}, or set the @code{quietmmap} variable in the allocating library function to be non-zero.
+
+An important component of these messages is the name of the memory-mapped file.
+Knowing that the file has been deleted is important for the user if the program crashes for any reason: internal (for example a parameter is given wrongly) or (for example you mistakenly kill the running job) reason.
+In the event of a crash, the memory-mapped files will not be deleted and you have to manually delete them because they are usually large and they may soon fill your full storage if not deleted in a long time due to successive crashes.
+
+This brings us to managing the memory-mapped files in your non-volatile memory: knowing where they are saved, placing them in different places of your file system, or deleting them when necessary.
+As the examples above show, memory-mapped files are stored in a hidden sub-directory of the the running directory: @file{.gnuastro_mmap}.
+If this directory doesn't exist, Gnuastro will automatically create it if it needs to memory-map an internal dataset.
+However, If the @file{.gnuastro_mmap} sub-directory exists and isn't writable, or it can't be created, then the file will be created in the running directory with a @file{.gnuastro_mmap_} prefix.
+
+Therefore one easy way to delete all memory-mapped files is to delete everything within this directory:
+
+@example
+rm -f .gnuastro_mmap/*
+@end example
+
+A much more common issue when dealing with memory-mapped files is their location.
+For example you may be running a program in a partition that is hosted by a HDD.
+But you also have another partition on an SSD (which has much faster I/O).
+So you want your memory-mapped files to be created in the SSD to speed up your processing.
+Another common scenario is this: you want your project source directory to only contain your plain-text scripts and you want your project's built products (even the temporary memory-mapped files) to be built in a different location because they are large and hard to maintain with the valuable scripts.
+
+To do host the memory-mapped files in another location, you can set @file{.gnuastro_mmap} to be a symbolic link to that location.
+For example, let's assume you want your memory-mapped files to be stored in @file{/path/to/dir/for/mmap}.
+All you have to do is to run following command before your Gnuastro analysis command:
+
+@example
+ln -s /path/to/dir/for/mmap .gnuastro_mmap
+@end example
+
+The programs will delete the memory-mapped file when it is no longer needed, but they won't delete the @file{.gnuastro_mmap} directory that hosts them.
+So if your project involves many Gnuastro programs and you want your memory-mapped files to be in a different location, you just have to make the symbolic link above once.
+
+Another memory-management scenario that may happen is this: you don't want a Gnuastro program to allocate internal datasets in the RAM at all.
+For example the speed of your Gnuastro-related project doesn't matter at that moment, and you have higher-priority jobs that are being run at the same time.
+In such cases, you can use the @option{--minmapsize} option that is available in all Gnuastro programs (see @ref{Processing options}).
+Any intermediate dataset that has a size larger than the value of this option will be memory-mapped, even if there is space available in your RAM.
+For example if you want any intermediate dataset larger than 1 megabyte to be memory-mapped, use @option{--minmapsize=1000000}.
+
+@cindex Linux kernel
+@cindex Kernel, Linux
+You shouldn't set the value of @option{--minmapsize} to be too small, otherwise even small intermediate values (that are very numerous) in the program will be memory-mapped.
+However the kernel can only host a limited number of memory-mapped files at every moment (by all running programs combined).
+For example in the default@footnote{If you need to host more memory-mapped files at one moment, you need to build your own customized Linux kernel.} Linux kernel on GNU/Linux operating systems this limit is roughly 64000.
+If the total number of memory-mapped files exceeds this number, all the programs using them will crash.
+Small/numerous intermediate values will rarely exceed a mega byte, so based on our experience, this is a good value in such scenarios.
+
+Actually, the default behavior for Gnuastro's programs (to only use memory-mapped files when there isn't enough RAM) is a side-effect of @option{--minmapsize}.
+The pre-defined value to this option is an extremely large value in the lowest-level Gnuastro configuration file (the installed @file{gnuastro.conf} described in @ref{Configuration file precedence}).
+This value is larger than the largest available RAM.
+You can check by running any Gnuastro program with a @option{-P} option.
+Because no dataset will be larger than this, by default the programs will first attempt to use the RAM for temporary storage.
+But if writing in the RAM fails (for any reason, maily due to lack of available space), then a memory-mapped file will be created.
+
+
+
+
+
+@node Tables, Tessellation, Memory management, Common program behavior
 @section Tables
 
 ``A table is a collection of related data held in a structured format within a database.
