Fits: pixel scales also shown in arcsec/pixel
Until now, the recently added '--pixelscale' option would only print the
pixel scale in units of 'deg/pixel', which is the raw units of the CDELT
keyword in the FITS WCS standrad.

However, when the WCS axis is in units of degrees, it is most common to
express the pixel scale in units of 'arcsec/pixel'. So besides printing the
'deg/pixel', when the units of the axis is in units of degrees, the pixel
scale is also printed in units of 'arcsec/pixel'.

Also, with this commit, the pixel area (on an image, or on each slice of a
3D cube) is printed and when we have a 3D dataset, the pixel volume is also
printed. Similar to above, when the units are in 'deg', values are also
printed in 'arcsec' and when we have meters ('m'), the value is also
printed in Angestroms.

--- a/NEWS
+++ b/NEWS
@@ -99,6 +99,11 @@ See the end of the file for license conditions.
      added "Memory management" section of the book for a complete
      explanation of Gnuastro's new memory management strategy.
 
+  Fits:
+   - The '--pixelscale' option also prints the pixel area (for 2D inputs,
+     or 2D slices of 3D inputs) and the voxel volume (for 3D inputs). Until
+     now, it would only print the pixel scale along each dimension.
+
   Table:
    - Column arithmetic operators 'degree-to-ra' and 'degree-to-dec' will
      return the sexagesimal format of '_h_m_s' and '_d_m_s'
