Arithmetic: new interpolation operators based on region borders
Until now, to interpolate saturated stars in a dataset, we needed to use
'interpolate-maxngb'. This operator looks within a given number of
neighboring pixels and is more useful in small noisy regions. But as the
blank regions become larger, it can cause a fragmentation in the centers.

With this commit, two new operators are defined 'interpolate-minofregion'
and 'interpolate-maxofregion'. With these two, all blank regions will be
interpolated with a single value that is either the minimum or maximum
value of the non-blank pixels that are immediately bordering it.

--- a/NEWS
+++ b/NEWS
@@ -38,7 +38,12 @@ See the end of the file for license conditions.
               | asttable -c'arith $1 degree-to-ra $2 degree-to-dec'
 
   Arithmetic:
-   - New operator:
+   - New operators:
+     - 'interpolate-maxofregion': interpolate connected blank regions with
+       the maximum value that is immediately touching it. This can be used
+       to fill the blank centers of saturated stars for example.
+     - 'interpolate-minofregion': similar to 'interpolate-maxofregion', but
+       for the minimum.
      - 'makenew': new operator to create an empty (zero-valued) new dataset
        with given dimension and size (given as operands).
 
