MakeCatalog: positions of min and max value account for many pixels
Until now, in the recently added columns like '--maxvx' and '--maxvy' we
were mistakely reporting the postiion of the first pixel that has the
maximum value. But in scenarios where the centers of saturated stars may be
saturated (and they are replaced by the maximum value), this would cause
significantly different positions (when there is a saturation spike in
particular).

With this commit, the mean position of all the maximum pixels is returned,
not just the first one. This fixes the problem above.

Also, I added to new columns: '--areaminv' and '--areamaxv' to report the
number of pixels that have the minimum/maximum value. This can be useful in
identifying saturated stars in the scenarios above.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -16426,6 +16426,12 @@ The used (non-blank in values image) area of the labeled region in units of arcs
 This column is just the value of the @option{--area} column, multiplied by the area of each pixel in the input image (in units of arcsec^2).
 Similar to the @option{--ra} or @option{--dec} columns, for this option to work, the objects extension used has to have a WCS structure.
 
+@item --areaminv
+The number of pixels that are equal to the minimum value of the labeled region (clump or object).
+
+@item --areamaxv
+The number of pixels that are equal to the maximum value of the labeled region (clump or object).
+
 @item --surfacebrightness
 The surface brightness (in units of mag/arcsec@mymath{^2}) of the labeled region (objects or clumps).
 For more on the definition of the surface brightness, see @ref{Brightness flux magnitude}.
