--- a/NEWS
+++ b/NEWS
@@ -70,6 +70,8 @@ See the end of the file for license conditions.
    --halfradiusobs: radius derived from '--halfsumarea', underestimates r_e.
    --fracradiusobs1: similar to --halfradiusobs, but for custom fraction 1.
    --fracradiusobs2: similar to --halfradiusobs, but for custom fraction 2.
+   --areaminv: the number of pixels that are equal to the minimum value.
+   --areamaxv: the number of pixels that are equal to the maximum value.
    - New columns to return the position of pixel with minimum or maximum
      value: '--minvx', '--maxvx', '--minvy', '--maxvy', '--minvz',
      '--maxvz'.
