--- a/NEWS
+++ b/NEWS
@@ -134,6 +134,7 @@ See the end of the file for license conditions.
   bug #59105: Column arithmetic operator degree-to-ra, returning to dec.
   bug #59136: Makeprofiles with --replace is not thread-safe.
   bug #59155: Match cannot find the proper row when coordinates have NaN.
+  bug #59371: MakeCatalog crash with clumps on non-contiguous object labels.
 
 
 
