--- a/NEWS
+++ b/NEWS
@@ -62,14 +62,16 @@ See the end of the file for license conditions.
    --halfmaxarea: number of pixels with a value larger than half the maximum.
    --halfmaxsum: sum of pixels with a value larger than half the maximum.
    --halfmaxsb: surf. brightness within half of the maximum.
-   --fracsum: fractions to use in '--fracsumarea1' or '--fracsumarea2'.
-   --fracsumarea1: area of given fraction of the summed object or clump values.
-   --fracsumarea2: area of given fraction of the summed object or clump values.
+   --fracmax: fractions to use in '--fracmaxarea1' or '--fracmaxarea2'.
+   --fracmaxsum1: sum of pixels brighter than first given fraction of max.
+   --fracmaxsum2: sum of pixels brighter than second given fraction of max.
+   --fracmaxarea1: number of pixels brighter than first given fraction of max.
+   --fracmaxarea2: number of pixels brighter than second given fraction of max.
+   --fracmaxradius1: radius derived from '--fracmaxarea1'.
+   --fracmaxradius2: radius derived from '--fracmaxarea2'.
    --halfsumsb: Surface brightness within area reported by '--halfsumarea'.
    --halfsumarea: area containing half of the summed object or clump values.
    --halfradiusobs: radius derived from '--halfsumarea', underestimates r_e.
-   --fracradiusobs1: similar to --halfradiusobs, but for custom fraction 1.
-   --fracradiusobs2: similar to --halfradiusobs, but for custom fraction 2.
    --areaminv: the number of pixels that are equal to the minimum value.
    --areamaxv: the number of pixels that are equal to the maximum value.
    - New columns to return the position of pixel with minimum or maximum
